--- a/index.html
+++ b/index.html
@@ -10,10 +10,23 @@
     <meta http-equiv="Expires" content="0">
 </head>
 <body>
-<xcon-test-widget></xcon-test-widget>
+
+<app-root></app-root>
+
+<script>
+    window.__XCONS_LOGGER_CONFIG__ = {
+        '@xcons/widget': {
+            enabled: true,
+            level: 1,  // WARN level (0=ERROR, 1=WARN, 2=INFO, 3=DEBUG, 4=TRACE)
+            prefix: 'WIDGET',
+            timestamp: true,
+            colors: true
+        }
+    };
+</script>
 
 <script type="module">
-    import './src/widget.ts';
+    import './src/app.bootstrap';
 </script>
 
 </body>
